--- a/book.bib
+++ b/book.bib
@@ -17,6 +17,15 @@
 }
 
 
+@misc{aph_qh,
+  author = {{Amsterdam Public Health}},
+  year = {2018},
+  title   = {Quality Handbook},
+  url = {http://www.emgo.nl/kc/},
+  note = {Retrieved May 25 2018, from \url{http://www.emgo.nl/kc/}}
+}
+
+
 @Article{Bates2015,
   title = {Fitting Linear Mixed-Effects Models Using {lme4}},
   author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
@@ -116,6 +125,7 @@
   doi = {10.1016/j.ecolmodel.2006.03.017}
 }
 
+
 @misc{ccmo_meddev,
   author = {{CCMO}},
   year = {2018},
@@ -125,7 +135,7 @@
 }
 
 @Article{Conner2012a,
-  author        = {Conner, Tamlin S. and Barrett, Lisa Feldman},
+  author        = {Tamlin S. Conner and Lisa Feldman Barrett},
   title         = {Trends in ambulatory self-report: The role of momentary experience in psychosomatic medicine},
   journal       = {Psychosomatic Medicine},
   year          = {2012},
