--- a/packages.bib
+++ b/packages.bib
@@ -51,6 +51,14 @@
   url = {https://CRAN.R-project.org/package=nlme},
 }
 
+@Manual{R-powerlmm,
+    title = {powerlmm: Power Analysis for Longitudinal Multilevel Models},
+    author = {Kristoffer Magnusson},
+    year = {2018},
+    note = {R package version 0.3.0},
+    url = {https://CRAN.R-project.org/package=powerlmm}
+}
+
 @Manual{R-simstudy,
   title = {simstudy: Simulation of Study Data},
   author = {Keith Goldfeld},
