--- a/book.bib
+++ b/book.bib
@@ -383,6 +383,20 @@
   keywords     = {book, r, statistics},
 }
 
+
+@Article{Green2016,
+    title = {simr: an R package for power analysis of generalised linear mixed models by simulation},
+    author = {Peter Green and Catriona J. MacLeod},
+    journal = {Methods in Ecology and Evolution},
+    volume = {7},
+    number = {4},
+    pages = {493--498},
+    year = {2016},
+    doi = {10.1111/2041-210X.12504},
+    url = {https://CRAN.R-project.org/package=simr},
+}
+
+
 @Article{Groot2010,
   author   = {Groot, Peter C.},
   title    = {{Patients can diagnose too: How continuous self-assessment aids diagnosis of, and recovery from, depression}},
