comment maketitle trick

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -1,10 +1,7 @@
 \thispagestyle{empty}
-
 \includepdf{images/cover.png}
 
-%\begin{center}
-%\includegraphics[width=\textwidth]{images/cover.png}
-%\end{center}
-
+% restore maketile (disabled in preamble.tex to get the cover before
+% title)
 \let\maketitle\oldmaketitle
 \maketitle
