--- a/preamble.tex
+++ b/preamble.tex
@@ -1,3 +1,4 @@
+% disable maketile temporarily (to get the cover before title - see frontpage.tex)
 \let\oldmaketitle\maketitle
 \AtBeginDocument{\let\maketitle\relax}
 
