--- a/frontpage.tex
+++ b/frontpage.tex
@@ -1,5 +1,5 @@
 \thispagestyle{empty}
-\includepdf{images/cover.png}
+\includepdf[fitpaper=false, pages=-]{images/cover.png}
 
 % restore maketile (disabled in preamble.tex to get the cover before
 % title)
