--- a/book.bib
+++ b/book.bib
@@ -554,6 +554,23 @@
   url     = {http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage{\&}an=00001504-201607000-00006 http://www.ncbi.nlm.nih.gov/pubmed/27153125},
 }
 
+
+@article{Nuij2018,
+  author = {Nuij, Chani and van Ballegooijen, Wouter and Ruwaard, Jeroen and de Beurs, Derek and Mokkenstorm, Jan and van Duijn, Erik and de Winter, Remco F.P. and O'Connor, Rory C. and Smit, Jan H. and Riper, Heleen and Kerkhof, Ad},
+  doi = {10.1016/J.INVENT.2018.04.005},
+  issn = {2214-7829},
+  journal = {Internet Interventions},
+  month = {may},
+  pages = {16--23},
+  publisher = {Elsevier},
+  title = {{Smartphone-based safety planning and self-monitoring for suicidal patients: Rationale and study protocol of the CASPAR (Continuous Assessment for Suicide Prevention And Research) study}},
+  url = {https://www.sciencedirect.com/science/article/pii/S2214782917301343},
+  volume = {13},
+  year = {2018}
+}
+
+
+
 @Article{Oorschot2012,
   author   = {Oorschot, Margreet and Lataster, Tineke and Thewissen, Viviane and Bentall, Richard and Delespaul, Philippe and Myin-Germeys, Inez},
   title    = {{Temporal dynamics of visual and auditory hallucinations in psychosis}},
